<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Whitaker\'s Words</string>
    <string name="settings">Settings</string>
    <string name="latin_to_english">Latin-English</string>
    <string name="english_to_latin">English-Latin</string>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <!-- Preferences -->
    <string name="words_preferences">Words Settings</string>
    <string name="misc_preferences">Miscellaneous</string>

    <string name="trim_output">Trim output</string>
    <string name="trim_output_summ">Removes least likely results. If results have been trimmed, output will be followed by an astrisk (*). Default: true</string>
    <string name="do_unknowns_only">Do unknowns only</string>
    <string name="do_unknowns_only_summ">Show only unrecognized words. Default: false</string>
    <string name="ignore_unknown_names">Ignore unknown names</string>
    <string name="ignore_unknown_names_summ">Ignore capitalized words longer than three letters if they are not in the dictionary, instead of printing UNKNOWN. Default: true</string>
    <string name="ignore_unknown_caps">Ignore unknown caps</string>
    <string name="ignore_unknown_caps_summ">Ignore words in all caps if they are not in the dictionary, instead of printing UNKNOWN. Default: true</string>
    <string name="do_compounds">Do compounds</string>
    <string name="do_compounds_summ">Look ahead for the verb TO_BE (or iri) when it finds a verb participle, with the expectation of finding a compound perfect tense or periphastic. Default: true</string>
    <string name="do_fixes">Do fixes</string>
    <string name="do_fixes_summ">When a result for a word is not found, try again with various prefixes and suffixes. Generally useful, but sometimes yields false positives. Default: true</string>
    <string name="do_tricks">Do tricks</string>
    <string name="do_tricks_summ">When a result is not found, try replacements like cl -> cul, vul -> vol, ads -> ass, inp -> imp, etc., to provide for recognized variants of classical spelling, though false positives can result. Default: true</string>
    <string name="do_dictionary_forms">Do dictionary forms</string>
    <string name="do_dictionary_forms_summ">Output line with forms associated with dictionary entry (nom/gen for noun, etc.). Default: true</string>
    <string name="show_age">Show age</string>
    <string name="show_age_summ">Show what during periods a word/inflection was in use. Default: true</string>
    <string name="show_frequency">Show frequency</string>
    <string name="show_frequency_summ">Show how frequently a word/inflection was used. Default: true</string>
    <string name="do_examples">Do examples</string>
    <string name="do_examples_summ">Provide examples for usage of case/tenses/etc. Produces lengthy output. Default: false</string>
    <string name="do_only_meanings">Do only meanings</string>
    <string name="do_only_meanings_summ">Output meaning without inflection details. Default: false</string>
    <string name="do_stems_for_unknown">Do stems for unknown</string>
    <string name="do_stems_for_unknown_summ">When unable to find a proper match in the dictionary, list the dictionary entries around the unknown. This will likely catch a substantive for which only the ADJ stem appears in dictionary, an ADJ for which there is only a N stem, etc. Default: false</string>

    <string name="search_on_keypress">Search on keypress</string>
    <string name="search_on_keypress_summ">Displays result while you type, without needing to press search. Default: true</string>


    <string name="about_title">About</string>
    <string name="about_long_title">About Whitaker\'s Words</string>
    <string name="about_text">
	The \'words\' program was created by Wiliam Whitaker. It is open
	source, under the following terms:\n\n

	\"All parts of the WORDS system, source code and data files, are made freely available to anyone who wishes to use them, for whatever purpose.\"\n\n
	    
	An archieved version of Whitaker\'s website is available at
	http://archives.nd.edu/whitaker/words.htm.\n\n

	This app is Open Source. Other than Whitaker\'s code, it under the MIT
	License. The source code is available at
	https://github.com/ids1024/whitakers-words-android.\n\n
    </string>

    <string-array name="theme_entries">
        <item>Follow System</item>
        <item>Dark</item>
        <item>Light</item>
    </string-array>
    <string-array name="theme_entry_values">
        <item>MODE_NIGHT_FOLLOW_SYSTEM</item>
        <item>MODE_NIGHT_YES</item>
        <item>MODE_NIGHT_NO</item>
    </string-array>

</resources>
